
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int die (char*) ;
 int execve (char*,char**,char**) ;
 int setgid (int ) ;
 int setuid (int ) ;

void rootshell(char **env)
{
 char pwd[128];
 char *sh[] = {"/system/bin/sh", 0};

 setuid(0); setgid(0);
 execve(*sh, sh, env);
 die("[-] execve");
}
